# CrashPilot

./: .editorconfig  .gitignore  Cargo.toml  README.md  buf.gen.yaml  build.rs  config.toml
.cargo/: local.toml
compiled_proto/cpp/api/: ssl_gc_api.pb.cc  ssl_gc_api.pb.h
compiled_proto/cpp/ci/: ssl_gc_ci.pb.cc  ssl_gc_ci.pb.h
compiled_proto/cpp/crashpilot/: common.pb.cc  common.pb.h
compiled_proto/cpp/engine/: ssl_gc_engine.pb.cc  ssl_gc_engine.pb.h  ssl_gc_engine_config.pb.cc  ssl_gc_engine_config.pb.h
compiled_proto/cpp/geom/: ssl_gc_geometry.pb.cc  ssl_gc_geometry.pb.h
compiled_proto/cpp/rcon/: ssl_gc_rcon.pb.cc  ssl_gc_rcon.pb.h  ssl_gc_rcon_autoref.pb.cc  ssl_gc_rcon_autoref.pb.h  ssl_gc_rcon_remotecontrol.pb.cc  ssl_gc_rcon_remotecontrol.pb.h  ssl_gc_rcon_team.pb.cc  ssl_gc_rcon_team.pb.h
compiled_proto/cpp/state/: ssl_gc_common.pb.cc  ssl_gc_common.pb.h  ssl_gc_game_event.pb.cc  ssl_gc_game_event.pb.h  ssl_gc_referee_message.pb.cc  ssl_gc_referee_message.pb.h  ssl_gc_state.pb.cc  ssl_gc_state.pb.h
compiled_proto/cpp/statemachine/: ssl_gc_change.pb.cc  ssl_gc_change.pb.h
compiled_proto/cpp/vision_tracked/: messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_detection_tracked.pb.cc  messages_robocup_ssl_detection_tracked.pb.h  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_geometry_legacy.pb.cc  messages_robocup_ssl_geometry_legacy.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  messages_robocup_ssl_wrapper_legacy.pb.cc  messages_robocup_ssl_wrapper_legacy.pb.h  messages_robocup_ssl_wrapper_tracked.pb.cc  messages_robocup_ssl_wrapper_tracked.pb.h
compiled_proto/python/api/: ssl_gc_api_pb2.py
compiled_proto/python/ci/: ssl_gc_ci_pb2.py
compiled_proto/python/crashpilot/: common_pb2.py
compiled_proto/python/engine/: ssl_gc_engine_config_pb2.py  ssl_gc_engine_pb2.py
compiled_proto/python/geom/: ssl_gc_geometry_pb2.py
compiled_proto/python/rcon/: ssl_gc_rcon_autoref_pb2.py  ssl_gc_rcon_pb2.py  ssl_gc_rcon_remotecontrol_pb2.py  ssl_gc_rcon_team_pb2.py
compiled_proto/python/state/: ssl_gc_common_pb2.py  ssl_gc_game_event_pb2.py  ssl_gc_referee_message_pb2.py  ssl_gc_state_pb2.py
crates/artificial_incompetence/: Cargo.toml
crates/artificial_incompetence/examples/: train_ai.rs
crates/artificial_incompetence/src/: ai_types.rs  config.rs  encode.rs  grid.rs  inference.rs  lib.rs  loader.rs  mask.rs  mlp.rs  modules.rs  train.rs  types.rs
crates/artificial_incompetence/src/modules/: actor.rs  attention.rs  coach.rs  critic.rs  grid.rs  mlp.rs  nn.rs
crates/artificial_incompetence/src/modules/nn/: cross_attention.rs  feed_forward.rs  heads.rs  multi_head_attention.rs  transformer.rs
crates/artificial_incompetence/src/train/: data.rs  gae.rs  ppo.rs  reward.rs  stages.rs  trainer.rs  transition.rs
crates/core_dump/: Cargo.toml
crates/core_dump/src/: lib.rs  proto.rs
crates/strategy_presets/: Cargo.toml
grafana/: crashpilot-loki-dashboard.json  crashpilot-robot-dashboard.json
proto/crashpilot/: README.md  common.proto
protocol/: common.capnp
protocol/crash_pilot/: cp_robot.capnp
protocol/robot/: robot_cp.capnp
src/: communication.rs  config.rs  data_handler.rs  game_logic.rs  helpers.rs  interface.rs  lib.rs  main.rs  metrics.rs  network.rs  proto.rs  robot_communication.rs  ssl.rs  ssl_communication.rs  utils.rs
src/communication/: create_multicast_socket.rs  gc_sender.rs  interface.rs  loki.rs  robot_receiver.rs  robot_sender.rs  ssl_communication.rs  ssl_gc_handler.rs  udp_listener.rs
src/data_handler/: ball_data.rs
src/game_logic/: ai_handler.rs  defend.rs  mode_game.rs  mode_manual.rs  mode_test.rs  types.rs
src/helpers/: ball_helper.rs  best_angle_to_goal.rs  robot_data.rs  vec.rs
src/network/: create_multicast_socket.rs  udp_listener.rs  udp_sender.rs
src/proto/: mod.rs
src/robot_communication/: robot_receiver.rs  robot_sender.rs
src/ssl/: referee.rs  vision.rs
src/ssl_communication/: create_multicast_socket.rs  gc_sender.rs  udp_listener.rs
src/utils/: write_to_file.rs
tools/: unixMsgRec  unixMsgRec.cpp
utils/: CMakeLists.txt  unixMsgRec.cpp
utils/udp-test/: Cargo.toml  network_delays.csv
(+31 files in other folders)
