[package]
name = "CrashPilot"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tokio = { version = "1.50.0", features = ["net", "sync", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.29.0"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
futures-util = "0.3.32"

[build-dependencies]
