[package]
name = "CrashPilot"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
tokio = { version = "1.50.0", features = ["net", "sync", "rt", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.29.0"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
futures-util = "0.3.32"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["server", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
serde_json = "1.0.145"
core_dump = { path = "crates/core_dump" }

[build-dependencies]

[workspace]
members = [
    "crates/*"
]

[features]
default = []
loki = []
interface = []