[package]
name = "artificial_incompetence"
version = "0.1.0"
edition = "2024"

[dependencies]
core_dump = { git = "https://github.com/Technulgy-LGNU/core-dump" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
indicatif = "0.18.3"
tch = { version = "0.24.0", features = ["download-libtorch"] }
simhark = { git = "https://github.com/Technulgy-LGNU/simhark", optional = true }
[features]
default = ["train"]
train = ["dep:simhark"]
