[package]
name = "artificial_incompetence"
version = "0.1.0"
edition = "2024"

[dependencies]
core_dump = { git = "https://github.com/Technulgy-LGNU/core-dump" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
indicatif = { version = "0.18.3", optional = true }
tch = { version = "0.24.0", features = ["download-libtorch"] }
simhark = { git = "https://github.com/Technulgy-LGNU/simhark", rev = "bd0abe55d1ff07afc4683267576f14908172e0b7", optional = true }
simhark-sumatra = { git = "https://github.com/Technulgy-LGNU/simhark", rev = "bd0abe55d1ff07afc4683267576f14908172e0b7", optional = true }

[features]
default = []
inference = []
train = [
  "inference",
  "dep:indicatif",
  "dep:serde_json",
  "dep:simhark",
]
sumatra-opponent = ["train", "simhark/sumatra", "dep:simhark-sumatra"]

[[example]]
name = "train_ai"
required-features = ["train"]
